# Python-Widget

./: README.md  pyproject.toml
python_widget/: controller.py  widget.py
