[tool.poetry]
name = "python-widget"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_widget"}]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
